--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
-{
+{ 
+  "scripts": {
+    "tslox": "node build/index.js"
+  },
   "devDependencies": {
     "@types/node": "^20.11.0",
     "typescript": "^5.3.3"
